# nwgrep

./: .gitignore  .pre-commit-config.yaml  .roborev.toml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
cli/: index.html
contributing/: index.html
docs/: api.md  cli.md  index.md  installation.md  usage.md  vibecoding.md
examples/pandas/: highlighting.ipynb  usage.py
examples/polars/: highlighting.ipynb  usage.py
installation/: index.html
search/: search_index.json
src/nwgrep/: __init__.py  accessor.py  cli.py  compliant.py  core.py  highlight.py
tests/: conftest.py  smoke_test.py  test_accessor.py  test_cli.py  test_highlight.py  test_nwgrep.py
usage/: index.html
vibecoding/: index.html
