[project]
name = "nwgrep"
version = "0.1.0"
description = "Grep-like tool for dataframes using Narwhals"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Eric Hutchins" }
]
keywords = ["dataframe", "grep", "search", "narwhals", "pandas", "polars", "pyarrow", "dask", "modin", "cudf", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "narwhals>=1.0.0",
]

[project.optional-dependencies]
# Aligned with narwhals minimum supported versions
pandas = ["pandas>=1.1.3"]
polars = ["polars>=0.20.4"]
pyarrow = ["pyarrow>=13.0.0"]
daft = ["daft>=0.5.18"]
dask = ["dask[dataframe]>=2024.8"]
modin = ["modin"]
cudf = ["cudf-cu12>=24.10.0; python_version >= '3.10' and python_version < '3.14' and sys_platform == 'linux'"]
pyspark = ["pyspark>=3.5.0; python_version < '3.14'"]
duckdb = ["duckdb>=1.1"]
ibis = ["ibis-framework>=6.0.0", "rich", "packaging", "pyarrow_hotfix"]
sqlframe = ["sqlframe>=3.22.0,!=3.39.3"]
all = [
    "pandas>=1.1.3",
    "polars>=0.20.4",
    "pyarrow>=13.0.0",
    "daft>=0.5.18",
    "dask[dataframe]>=2024.8",
    "duckdb>=1.1",
]


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/erichutchins/nwgrep"
Documentation = "https://github.com/erichutchins/nwgrep#readme"
Repository = "https://github.com/erichutchins/nwgrep"
Issues = "https://github.com/erichutchins/nwgrep/issues"

[project.scripts]
nwgrep = "nwgrep.cli:main"

[project.entry-points."narwhals.plugins"]
narwhals-nwgrep = "nwgrep"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=nwgrep --cov-report=term-missing"

# Copied ruff settings from github.com/narwhals-dev/narwhals-daft
[tool.ruff.lint]
preview = true
explicit-preview-rules = true

extend-safe-fixes = [
  "C419",    # unnecessary-comprehension-in-call
  "C420",    # unnecessary-dict-comprehension-for-iterable
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "PLR6201", # literal-membership
  "TC",      # flake8-type-checking
  "UP",      # pyupgrade
  "PLW1514", # unspecified-encoding
]
extend-select = [
  "PLR0914", # too-many-locals
  "PLR0916", # too-many-boolean-expressions
  "PLR1702", # too-many-nested-blocks
  "PLR6201", # literal-membership
  "PLW1514", # unspecified-encoding
]
select = ["ALL"]
ignore = [
  "A001",    # builtin-variable-shadowing
  "A004",    # builtin-import-shadowing
  "ARG002",  # unused-method-argument
  "ANN401",  # any-type
  "COM812",  # missing-trailing-comma
  "D100",    # undocumented-public-module
  "D101",    # undocumented-public-class
  "D102",    # undocumented-public-method
  "D103",    # undocumented-public-function
  "D104",    # undocumented-public-package
  "D105",    # undocumented-magic-method
  "D107",    # undocumented-public-init
  "DTZ001",  # call-datetime-without-tzinfo
  "E501",    # line-too-long
  "FBT003",  # boolean-positional-value-in-call (We enforce at definition site when it is a flag, not a value (e.g. `lit(False)`))
  "FIX",     # flake8-fixme
  "PD010",   # pandas-use-of-dot-pivot-or-unstack
  "PLC0415", # `import` should be at the top-level of a file
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "PLW1641", # Object does not implement `__hash__` method
  "SLF001",  # private-member-access
  "TD002",   # missing-todo-author
  "TD003",   # missing-todo-link
  "TD004",   # missing-todo-colon
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["format"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
  "Series",
  "DataFrame",
  "_Window",
  "F",
  "_F",
]

[tool.ruff.lint.per-file-ignores]
"update_run_tests.py" = ['S603', 'T201']
"run_tests.py" = ['S603', 'T201']
"utils/*.py" = ["S603", "S607", "T201"]
"src/nwgrep/cli.py" = ["T201"]
"tests/*.py" = ["S101", "S603", "T201", "PD011"]
"examples/**/*.py" = ["T201", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ty.rules]
# Pragmatic type checking with ty (Red Knot)
# Optional dependencies may not be installed, so we ignore unresolved imports
"unresolved-import" = "ignore"
# Type inference for optional dependencies is incomplete
"invalid-argument-type" = "ignore"
"missing-argument" = "ignore"
# Examples and tests use optional backends - ignore attribute errors
"unresolved-attribute" = "ignore"
"possibly-missing-attribute" = "ignore"
