[project]
name = "nwgrep"
version = "0.1.0"
description = "Grep-like tool for dataframes using Narwhals"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Eric Hutchins" }
]
keywords = ["dataframe", "grep", "search", "narwhals", "pandas", "polars", "pyarrow", "dask", "modin", "cudf", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "narwhals>=2.15.0",
]

[project.optional-dependencies]
# Feature-based extras
# CLI requires polars for efficient lazy scanning of binary formats
cli = ["polars>=1.37.1"]
# Styling for highlighted output in notebooks (great_tables for polars)
notebook = ["great-tables>=0.15.0"]
# Include all feature-based extras
all = ["nwgrep[cli,notebook]"]

[dependency-groups]
# Backends used for testing and development, aligned to narwhals' 
# minimum requirements github.com/narwhals-dev/narwhals/blob/main/pyproject.toml
test-backends = [
    "pandas>=1.1.3",
    "polars>=0.20.4", 
    "pyarrow>=13.0.0",
    "jinja2",  # Required for pandas.DataFrame.style
]
# Test dependencies
tests = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Linting and formatting
lint = [
    "ruff>=0.9.0",
]
# Documentation
docs = [
    "mkdocs-material>=9.7.0",
]
# Notebook styling (mirrors optional-dependencies.notebook for dev group)
notebook = [
    "great-tables>=0.15.0",
]
# Development: tests + lint + test-backends + notebook
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    {include-group = "test-backends"},
    {include-group = "notebook"},
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://erichutchins.github.io/nwgrep/"
Documentation = "https://erichutchins.github.io/nwgrep/"
Repository = "https://github.com/erichutchins/nwgrep"
Issues = "https://github.com/erichutchins/nwgrep/issues"

[project.scripts]
nwgrep = "nwgrep.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=nwgrep --cov-report=term-missing"

# Copied ruff settings from github.com/narwhals-dev/narwhals-daft
[tool.ruff.lint]
preview = true
explicit-preview-rules = true

extend-safe-fixes = [
  "C419",    # unnecessary-comprehension-in-call
  "C420",    # unnecessary-dict-comprehension-for-iterable
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "PLR6201", # literal-membership
  "TC",      # flake8-type-checking
  "UP",      # pyupgrade
  "PLW1514", # unspecified-encoding
]
extend-select = [
  "PLR0914", # too-many-locals
  "PLR0916", # too-many-boolean-expressions
  "PLR1702", # too-many-nested-blocks
  "PLR6201", # literal-membership
  "PLW1514", # unspecified-encoding
]
select = ["ALL"]
ignore = [
  "A001",    # builtin-variable-shadowing
  "A004",    # builtin-import-shadowing
  "ARG002",  # unused-method-argument
  "ANN401",  # any-type
  "COM812",  # missing-trailing-comma
  "D100",    # undocumented-public-module
  "D101",    # undocumented-public-class
  "D102",    # undocumented-public-method
  "D103",    # undocumented-public-function
  "D104",    # undocumented-public-package
  "D105",    # undocumented-magic-method
  "D107",    # undocumented-public-init
  "DTZ001",  # call-datetime-without-tzinfo
  "E501",    # line-too-long
  "FBT003",  # boolean-positional-value-in-call (We enforce at definition site when it is a flag, not a value (e.g. `lit(False)`))
  "FIX",     # flake8-fixme
  "PD010",   # pandas-use-of-dot-pivot-or-unstack
  "PLC0415", # `import` should be at the top-level of a file
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "PLW1641", # Object does not implement `__hash__` method
  "SLF001",  # private-member-access
  "TD002",   # missing-todo-author
  "TD003",   # missing-todo-link
  "TD004",   # missing-todo-colon
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["format"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
  "Series",
  "DataFrame",
  "_Window",
  "F",
  "_F",
]

[tool.ruff.lint.per-file-ignores]
"update_run_tests.py" = ['S603', 'T201']
"run_tests.py" = ['S603', 'T201']
"utils/*.py" = ["S603", "S607", "T201"]
"src/nwgrep/cli.py" = ["T201"]
"tests/*.py" = ["S101", "S603", "T201", "PD011"]
"examples/**/*.py" = ["T201", "INP001"]
"examples/**/*.ipynb" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ty.rules]
# Pragmatic type checking with ty
# Optional dependencies may not be installed, so we ignore unresolved imports
"unresolved-import" = "ignore"
